--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vite + React</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+      <script src="https://kit.fontawesome.com/506e3bafd5.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
