--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Vite + React</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-      <script src="https://kit.fontawesome.com/506e3bafd5.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/506e3bafd5.js" crossorigin="anonymous"></script>
+     <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
   </head>
   <body>
     <div id="root"></div>
